--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""
 paginate_path: "/page:num/"
 permalink: :title/
 
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 paginate: 5
 
