--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 # This line should *not* be indented
-media_folder: "wp-contnet/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "wp-content/uploads" # Media files will be stored in the repo under images/uploads
 
 
 
